--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="col-md-6">
                     <h2 class="mb-4">Hello World!</h2>
                     <h4>I'm CJ Steeve Cadenas</h4>
-                    <p>Welcome to my portfolio! I am an aspiring web developer who is passionate about creating
+                    <p>Welcome to my portfolio! I am an aspiring web developer from Pamantasa ng Lungsod ng San Pablo studying Bachelor of Science in Information Technology and is passionate about creating
                         beautiful and functional websites.</p>
                 </div>
                 <div class="col-md-6 text-center">
