--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                </h1><a class="navbar-brand" href="#">Seijicxz</a><h1>
+                <h1><a class="navbar-brand" href="#">Seijicxz</a></h1>h1>
                 <div class="d-flex justify-content-end">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
