--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <p>I enjoy turning creative designs into responsive websites and solving programming challenges.</p>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="https://scontent.fmnl4-4.fna.fbcdn.net/v/t39.30808-6/472530190_1359911421657825_5361504132116512890_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeGgs3Fbrix2q7U6w2mlnt51R2wsVgJSlfJHbCxWAlKV8o8Ppda7g2qAbgAJ7RHGDmZZWDEXt6uT0nr6omTo3Thm&_nc_ohc=z0tOReh45_AQ7kNvgHcrSgp&_nc_oc=Adkv_g1D3z-cU9K1eGzD6KcQiIcXOiqKv6GvT8hyE6jPm1jOFvj2aYck1Q9k0Y8GmG8ba0_638BLr7BnawrAGDsp&_nc_zt=23&_nc_ht=scontent.fmnl4-4.fna&_nc_gid=-V9Lpu5-yUpGkP52Ya1e5g&oh=00_AYExuZ3aDD4YPk-EilXMt6XHNuylpTo35JBcXyuvTcYU_A&oe=67E33CCF"
+                    <img src="https://64.media.tumblr.com/ff21b4f05bb79f16e0dceb7dfad75272/tumblr_mqtho3Fr0n1rgam01o1_1280.png"
                         class="img-fluid rounded-circle mt-4" alt="Profile Image" style="max-width: 300px;">
                 </div>
             </div>
